Wed May 19 02:18:13 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/config/mc_test_utils.mpb:

          Moving this file up to the common mpb area because many scoreboard
          builds are not set up to include mpbs from the workspace directory.
          This is not ideal because this file will end up getting installed.

        * examples/mc_test_utils.mpb:

          Removed this file (moved it to bin/MakeProjectCreator/config).

Tue May 18 21:34:34 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ACEXML/apps/svcconf/svcconf.mpc:
        * ACEXML/common/common.mpc:
        * ACEXML/parser/parser/parser.mpc:
        * Kokyu/Kokyu.mpc:
        * ace/ETCL/ETCL.mpc:
        * ace/Monitor_Control/Monitor_Control.mpc:
        * ace/QoS/qos.mpc:
        * ace/SSL/ssl.mpc:
        * ace/SSL/ssl_for_tao.mpc:
        * ace/ace.mpc:
        * apps/JAWS/server/server.mpc:
        * apps/gperf/src/gperf.mpc:
        * bin/MakeProjectCreator/config/MPC.cfg:
        * bin/MakeProjectCreator/config/install.mpb:
        * bin/MakeProjectCreator/config/install_data.mpb:
        * bin/MakeProjectCreator/modules/GNUACEProjectCreator.pm:
        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:
        * bin/MakeProjectCreator/templates/gnu.mpd:
        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/Process_Win32.pm:
        * bin/PerlACE/Run_Test.pm:
        * bin/PerlACE/TestTarget.pm:
        * contrib/minizip/minizip.mpc:
        * include/makeinclude/macros.GNU:
        * include/makeinclude/rules.common.GNU:
        * include/makeinclude/rules.local.GNU:
        * include/makeinclude/wrapper_macros.GNU:
        * protocols/ace/HTBP/HTBP.mpc:
        * protocols/ace/RMCast/RMCast.mpc:
        * protocols/ace/TMCast/TMCast.mpc:

          Added support for "make install" with the gnuace makefiles (bug 3244)
          Improved support for ARCH builds: executables will go to the ARCH